Fixed sizing on mobile

--- a/style.css
+++ b/style.css
@@ -59,15 +59,15 @@ body.outer {
     padding-bottom: 25px;
 }
 
-.headertext {
-    display:inline-block;
-    padding-left: 28px;
-    padding-top: 75px;
-}
-
 .headerphoto {
     display: inline-block;
     float: left;
+}
+
+.headertext {
+    display: inline-block;
+    padding-left: 28px;
+    padding-top: 75px;
 }
 
 .contactform input, textarea {
@@ -88,7 +88,7 @@ body.outer {
 }
 
 .contactform input:focus {
-        border: 2px solid #24A0E8;
+    border: 2px solid #24A0E8;
 }
 
 .contactform textarea {
@@ -122,9 +122,38 @@ body.outer {
 }
 
 .largerFont {
-    font-size: 36px;
+    font-size: 24px;
 }
 
-.largerFont {
-    font-size: 24px;
+/*Mobile Start*/
+@media (max-width:1024px) {
+
+    .header {
+        margin-bottom: 5px;
+        padding-bottom: 5px;
+    }
+
+    .headerphoto {
+        clear: both;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        float: none;
+        text-align: center;
+    }
+
+    .headertext {
+        display: block;
+        padding-left: 0px;
+        padding-top: 0px;
+        text-align: center;
+    }
+    
+    .largestFont {
+        font-size: 30px;
+    }
+
+    .largerFont {
+        font-size: 13px;
+    }
 }
